--- a/src/assets/less/login.less
+++ b/src/assets/less/login.less
@@ -1,18 +1,15 @@
 @width: 100%;
 @height: 100%;
 .login-div {
-  /*background-color: #2c3e50;*/
-  /*background-image: url('../assets/login.jpg');*/
   width: @width;
   height: @height;
-  position: absolute;
 }
 
 .login-box {
+  background-color: white;
   border: 1px solid #DCDFE6;
+  margin: 10% auto;
   width: 30%;
-  height: 40%;
-  margin: 12% auto;
   padding: 35px 70px 15px 35px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -27,5 +24,5 @@
 }
 
 .login-button {
-  margin-right: 10%;
+  margin-left: 33%;
 }
